--- a/app/src/at-cuongle/res/layout/fragment_list_music.xml
+++ b/app/src/at-cuongle/res/layout/fragment_list_music.xml
@@ -36,10 +36,11 @@
 
         <TextView
             android:id="@+id/tvNameMusicBottom"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="#191B1E" />
 
         <TextView
