--- a/app/src/at-uyennguyen/res/layout/fragment_list_music.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_list_music.xml
@@ -9,11 +9,11 @@
         android:id="@+id/tv_header"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/orangeB40"
+        android:background="@color/blue_dark"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="@string/playlist"
-        android:textColor="@color/grey46555"
+        android:textColor="@android:color/white"
         android:textSize="30dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +30,7 @@
         android:id="@+id/contrainLayoutPlay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/orangeB40"
+        android:background="@color/blue_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,12 +50,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             app:layout_constraintStart_toEndOf="@id/imgBottomThumbnail"
             app:layout_constraintTop_toTopOf="@id/imgBottomThumbnail" />
 
         <TextView
             android:id="@+id/tvBottomSinger"
+            android:textColor="@color/blue_ACA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/tvBottomName"
@@ -63,28 +64,28 @@
 
         <ImageView
             android:id="@+id/imgBottomNext"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_next"
+            android:src="@drawable/ic_skip_next_white_36dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/imgBottomThumbnail" />
 
         <ImageView
             android:id="@+id/imgBottomPlay"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_pause"
+            android:src="@drawable/ic_play_circle"
             app:layout_constraintEnd_toStartOf="@id/imgBottomNext"
             app:layout_constraintTop_toTopOf="@id/imgBottomNext" />
 
         <ImageView
             android:id="@+id/imgBottomPrevious"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_previous"
+            android:src="@drawable/ic_skip_previous_white_36dp"
             app:layout_constraintEnd_toStartOf="@id/imgBottomPlay"
             app:layout_constraintTop_toTopOf="@id/imgBottomNext" />
     </androidx.constraintlayout.widget.ConstraintLayout>
