--- a/app/src/at-uyennguyen/res/layout/fragment_play_music.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_play_music.xml
@@ -9,14 +9,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/orange">
+        android:background="@color/blue_E72">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgThumbnailPlay"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/cd_song"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-light"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/blue_ACA"
             android:textSize="15dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +60,7 @@
             android:id="@+id/tvCurrentPosition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue_ACA"
             app:layout_constraintBottom_toTopOf="@id/seekBar"
             app:layout_constraintStart_toStartOf="@id/seekBar" />
 
@@ -67,34 +68,35 @@
             android:id="@+id/tvDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue_ACA"
             app:layout_constraintBottom_toTopOf="@id/seekBar"
             app:layout_constraintEnd_toEndOf="@id/seekBar" />
 
         <ImageView
             android:id="@+id/btnPlay"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:src="@drawable/ic_play"
+            android:src="@drawable/ic_pause_white_36dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
         <ImageView
             android:id="@+id/btnNext"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:src="@drawable/ic_next"
+            android:src="@drawable/ic_skip_next_white_36dp"
             app:layout_constraintStart_toEndOf="@id/btnPlay"
             app:layout_constraintTop_toTopOf="@id/btnPlay" />
 
         <ImageView
             android:id="@+id/btnPrevious"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_previous"
+            android:src="@drawable/ic_skip_previous_white_36dp"
             app:layout_constraintEnd_toStartOf="@id/btnPlay"
             app:layout_constraintTop_toTopOf="@id/btnPlay" />
 
