--- a/app/src/at-uyennguyen/res/layout/item_list_media.xml
+++ b/app/src/at-uyennguyen/res/layout/item_list_media.xml
@@ -3,13 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:layout_marginStart="1dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginEnd="1dp"
-    android:background="@drawable/item"
+    android:background="@color/blue_E72"
     android:orientation="vertical">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgThumbnail"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -23,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="19dp"
         app:layout_constraintStart_toEndOf="@id/imgThumbnail"
         app:layout_constraintTop_toTopOf="@id/imgThumbnail" />
@@ -34,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:textColor="@color/grey46555"
+        android:textColor="@color/blue_ACA"
         app:layout_constraintStart_toEndOf="@id/imgThumbnail"
         app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -44,7 +41,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:textColor="@color/grey46555"
+        android:textColor="@color/blue_ACA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/imgThumbnail" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/blue_ACA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
