--- a/app/src/at-uyennguyen/res/values/colors.xml
+++ b/app/src/at-uyennguyen/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="greyOfHint">#ACA8A8</color>
     <color name="green">#30BE76</color>
     <color name="grey46555">#46555C</color>
-    <color name="orange">#ABFFAB40</color>
-    <color name="orangeB40">#F0FFAB40</color>
+    <color name="blue_dark">#323A66</color>
+    <color name="blue_ACA">#DBCACA</color>
+    <color name="blue_E72">#484E72</color>
 </resources>
 
