--- a/app/src/at-cuongle/res/layout/fragment_main_screen_music.xml
+++ b/app/src/at-cuongle/res/layout/fragment_main_screen_music.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_background"
+    android:background="@drawable/ic_background"
     tools:context="asiantech.internship.summer.service_broadcastReceiver.MainScreenMusicFragment">
 
     <Button
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:textColor="#80828A"
+        android:textColor="@color/color_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgMusic" />
 
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:textColor="#80828A"
+        android:textColor="@color/color_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgMusic" />
 
