--- a/app/src/at-cuongle/res/layout/item_recycler_music.xml
+++ b/app/src/at-cuongle/res/layout/item_recycler_music.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardBackgroundColor="#000000"
+    card_view:cardBackgroundColor="@color/color_black"
     card_view:cardCornerRadius="12dp"
-    card_view:cardElevation="3dp"
-    card_view:contentPadding="4dp">
+    card_view:cardElevation="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -19,6 +18,7 @@
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:src="@drawable/ic_music"
+            app:layout_constraintCircleRadius="12dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,9 +26,10 @@
             android:id="@+id/tvNameMusic"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:textColor="#FFFFFF"
-            android:maxLines="1"
+            android:layout_marginLeft="4dp"
             android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/color_while"
             app:layout_constraintLeft_toLeftOf="@+id/imgMusic"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgMusic" />
@@ -37,7 +38,7 @@
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#80828A"
+            android:textColor="@color/color_textview_artist"
             app:layout_constraintBottom_toBottomOf="@+id/imgMusic"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imgMusic" />
@@ -46,7 +47,8 @@
             android:id="@+id/tvArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#80828A"
+            android:layout_marginLeft="4dp"
+            android:textColor="@color/color_textview_artist"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgMusic"
             app:layout_constraintTop_toTopOf="@+id/tvNameMusic" />
