--- a/app/src/at-cuongle/res/layout/item_recycler_music.xml
+++ b/app/src/at-cuongle/res/layout/item_recycler_music.xml
@@ -17,14 +17,13 @@
             android:id="@+id/imgMusic"
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_music"
             app:layout_constraintCircleRadius="12dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvNameMusic"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="4dp"
             android:ellipsize="end"
