--- a/app/src/at-nguyenha/res/layout/fragment_list_music.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_list_music.xml
@@ -77,7 +77,7 @@
             android:id="@+id/imgPlayPause"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_pause"
+            android:src="@drawable/ic_play"
             app:layout_constraintBottom_toBottomOf="@id/imgPrevious"
             app:layout_constraintLeft_toRightOf="@+id/imgPrevious"
             app:layout_constraintRight_toLeftOf="@id/imgNext"
