--- a/app/src/at-nguyenha/res/values/colors.xml
+++ b/app/src/at-nguyenha/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="textview_color_account">#30BE76</color>
+    <color name="textview_textcolor_white">#FFFFFF</color>
+    <color name="textview_textcolor_black">#000000</color>
+    <color name="tablayout_color_indicator">#30BE76</color>
 </resources>
