--- a/app/src/at-hauha/res/layout/fragment_signup.xml
+++ b/app/src/at-hauha/res/layout/fragment_signup.xml
@@ -2,19 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/loginContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/ic_background_icon"
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgAvatar"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginTop="48dp"
         android:elevation="10dp"
-        android:src="@drawable/ic_conghau_logo"
+        android:src="@drawable/ic_empty_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +26,11 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="200dp"
-        android:text="@string/textview_welcome_back"
+        android:text="@string/textview_register"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgLogo" />
+        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
 
     <TextView
         android:id="@+id/tvSignIn"
@@ -49,7 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="50dp"
-        android:text="@string/textview_e_mail"
+        android:text="@string/textview_email_address"
+        android:textColor="@android:color/white"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +64,7 @@
         android:hint="@string/hint_email_gmail_com"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvEmail"
@@ -74,7 +76,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:text="@string/textview_password"
+        android:text="@string/hint_password"
+        android:textColor="@android:color/white"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,25 +88,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:hint="@string/textview_password"
+        android:hint="@string/hint_password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPassword"
         tools:targetApi="o" />
 
     <TextView
-        android:id="@+id/tvLogin"
+        android:id="@+id/tvRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/login_button"
+        android:layout_marginHorizontal="100dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/register_button"
+        android:elevation="10dp"
         android:gravity="center"
         android:paddingVertical="10dp"
-        android:text="@string/textview_login"
-        android:textColor="@android:color/white"
+        android:text="@string/textview_register_now"
+        android:textColor="@color/colorBlue"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,11 +119,11 @@
         android:id="@+id/tvSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:text="@string/sign_up"
-        android:textSize="14sp"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLogin" />
-
+        app:layout_constraintTop_toBottomOf="@id/tvRegister" />
 </androidx.constraintlayout.widget.ConstraintLayout>
