--- a/app/src/at-hauha/res/values/colors.xml
+++ b/app/src/at-hauha/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="color_green">#30BE76</color>
     <color name="color_black">#070707</color>
     <color name="colorBlue">#329AE7</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
