--- a/app/src/at-cuongle/res/layout/fragment_login.xml
+++ b/app/src/at-cuongle/res/layout/fragment_login.xml
@@ -22,10 +22,10 @@
             android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/edtPasswordSign" />
 
         <EditText
-            android:id="@+id/edtPassword"
+            android:id="@+id/edtPasswordSign"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:ems="10"
