--- a/app/src/at-cuongle/res/layout/fragment_main_screen.xml
+++ b/app/src/at-cuongle/res/layout/fragment_main_screen.xml
@@ -1,4 +1,5 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,14 +21,16 @@
             android:layout_height="@dimen/tablayout_height_80dp" />
     </RelativeLayout>
 
-    <com.google.android.material.navigation.NavigationView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start">
+        android:layout_gravity="start"
+        android:background="@color/color_black">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </com.google.android.material.navigation.NavigationView>
+    </RelativeLayout>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
