--- a/app/src/at-cuongle/res/layout/fragment_to_do.xml
+++ b/app/src/at-cuongle/res/layout/fragment_to_do.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/ic_add" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvToDo"
+        android:id="@+id/recyclerViewToDo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
