--- a/app/src/at-cuongle/res/layout/row_todo.xml
+++ b/app/src/at-cuongle/res/layout/row_todo.xml
@@ -1,24 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="vertical"
     app:clickToClose="true">
 
-
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_delete_red_600_24dp" />
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvRowToDo"
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_delete_red_600_24dp"
+            android:weightSum="1" />
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/ic_border_color_black_24dp" />
+
+        <CheckBox
+            android:id="@+id/chkIsDone"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp" />
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:textColor="@color/color_black"
-        android:textSize="30dp" />
+        android:layout_margin="2dp"
+        card_view:cardCornerRadius="12dp"
+        card_view:cardElevation="3dp">
 
+        <TextView
+            android:id="@+id/tvRowToDo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textColor="@color/color_black"
+            android:textSize="30dp" />
+    </androidx.cardview.widget.CardView>
 </com.daimajia.swipe.SwipeLayout>
