--- a/app/src/at-nguyenha/res/layout/fragment_login.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_login.xml
@@ -103,7 +103,7 @@
             android:text="@string/textview_text_forgot_password"
             android:textSize="@dimen/textview_textsize_14sp"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toTopOf="@id/tvPassword" />
+            app:layout_constraintTop_toTopOf="@id/tvPasswordLogin" />
 
 
         <EditText
@@ -117,7 +117,7 @@
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLogin"
             tools:ignore="Autofill" />
 
         <Button
