--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -135,7 +135,7 @@
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLogin"
             tools:ignore="Autofill" />
 
         <Button
@@ -150,7 +150,7 @@
             android:textColor="@android:color/white"
             app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toBottomOf="@id/edtPassword" />
+            app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin" />
 
         <TextView
             android:id="@+id/tvScratch"
