--- a/app/src/at-uyennguyen/res/layout/fragment_login_todo.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_login_todo.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvUsername"
+        android:id="@+id/tvUsernameLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvWelcome" />
 
     <EditText
-        android:id="@+id/edtUsername"
+        android:id="@+id/edtUsernameLogin"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
@@ -37,20 +37,20 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvUsername" />
+        app:layout_constraintTop_toBottomOf="@id/tvUsernameLogin" />
 
     <TextView
-        android:id="@+id/tvPassword"
+        android:id="@+id/tvPasswordLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:text="Password"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtUsername" />
+        app:layout_constraintTop_toBottomOf="@id/edtUsernameLogin" />
 
     <EditText
-        android:id="@+id/edtPassword"
+        android:id="@+id/edtPasswordLogin"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
@@ -60,7 +60,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPassword" />
+        app:layout_constraintTop_toBottomOf="@id/tvPasswordLogin" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -72,7 +72,7 @@
         android:background="@drawable/button"
         android:text="LOGIN"
         android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/edtPassword" />
+        app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin" />
 
     <TextView
         android:id="@+id/tvRegister"
