register, login account, list todo to recycler view, edit profile

--- a/app/src/at-nguyenha/res/layout/fragment_login_save_data.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_login_save_data.xml
@@ -93,7 +93,7 @@
             tools:ignore="Autofill" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnLoginSaveData"
             android:layout_width="match_parent"
             android:layout_height="@dimen/layout_height_52dp"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
@@ -115,7 +115,7 @@
             android:textSize="@dimen/textview_textsize_14sp"
             app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
+            app:layout_constraintTop_toBottomOf="@id/btnLoginSaveData" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
