--- a/app/src/at-nguyenha/res/layout/activity_edit_to_do.xml
+++ b/app/src/at-nguyenha/res/layout/activity_edit_to_do.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="asiantech.internship.summer.savedata.activity.EditToDoActivity">
+    tools:context="asiantech.internship.summer.savedata.activity.AddEditToDoActivity">
 
     <EditText
         android:id="@+id/edtEditToDo"
