--- a/app/src/at-nguyenha/res/layout/activity_to_do.xml
+++ b/app/src/at-nguyenha/res/layout/activity_to_do.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawerToDo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_background"
     tools:context="asiantech.internship.summer.savedata.activity.ToDoActivity">
 
     <LinearLayout
