Create function Edit, Check, Delete, GridView Picture

--- a/app/src/at-hauha/res/layout/todo_item.xml
+++ b/app/src/at-hauha/res/layout/todo_item.xml
@@ -3,28 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeLayout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/llItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/imgEdit"
-            android:src="@drawable/ic_delete_white_24dp"
-            android:background="#e60707"
-            android:layout_width="wrap_content"
-            android:padding="20dp"
-            android:layout_height="wrap_content"/>
+
         <ImageView
             android:id="@+id/imgDelete"
-            android:src="@drawable/ic_mode_edit_white_24dp"
-            android:background="#e66407"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#e60707"
             android:padding="20dp"
-            android:layout_height="wrap_content"/>
+            android:src="@drawable/ic_delete_white_24dp" />
+
+        <ImageView
+            android:id="@+id/imgEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#e66407"
+            android:padding="20dp"
+            android:src="@drawable/ic_mode_edit_white_24dp" />
     </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
@@ -34,9 +38,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_marginHorizontal="40dp"
             android:background="@drawable/line"
             tools:ignore="UnusedAttribute" />
@@ -50,10 +54,12 @@
             android:text="@string/textview_todo"
             android:textSize="16sp"
             tools:targetApi="o" />
+
         <CheckBox
-            android:layout_gravity="center|right"
+            android:id="@+id/chkTodo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right" />
 
     </androidx.cardview.widget.CardView>
 
