--- a/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
@@ -109,7 +109,7 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatarProfile" />
 
         <TextView
             android:id="@+id/tvBack"
