--- a/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatarProfile"
@@ -93,30 +91,18 @@
             android:id="@+id/btnEdit"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="60dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="60dp"
             android:background="@drawable/button"
-            android:text="REGISTER"
+            android:text="EDIT"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/edtPasswordEdit" />
-
-        <TextView
-            android:id="@+id/tvLoginhere"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Login Here"
-            android:textColor="#12613A"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnEdit" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="@id/tvLoginhere" />
-
+            app:layout_constraintTop_toBottomOf="@id/btnEdit"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
