--- a/app/src/at-uyennguyen/res/layout/item_header_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/item_header_profile.xml
@@ -7,15 +7,14 @@
     android:background="@drawable/header">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgAvatar"
+        android:id="@+id/imgAvatarProfile"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/img_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tvUserName"
@@ -25,8 +24,8 @@
         android:textColor="@android:color/black"
         android:textSize="17dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/imgAvatar"
-        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
+        app:layout_constraintStart_toStartOf="@id/imgAvatarProfile"
+        app:layout_constraintTop_toBottomOf="@id/imgAvatarProfile"
         android:text="uyennguyen"/>
     <TextView
         android:id="@+id/tvNicknameHome"
