--- a/app/src/at-uyennguyen/res/layout/item_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/item_profile.xml
@@ -2,44 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/tv_todo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <ImageView
+        android:id="@+id/imgIcon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center"
-        android:text="abjhie"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_edit_profile"/>
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:textColor="@android:color/black"
-        android:textStyle="bold"/>
-    <ImageView
-        android:id="@+id/ic_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete_black_36dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imgIcon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"/>
-    <ImageView
-        android:id="@+id/ic_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_check_black_36dp"
-        app:layout_constraintEnd_toStartOf="@id/ic_delete"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"/>
-    <ImageView
-        android:id="@+id/ic_write"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_border_color_black_36dp"
-        app:layout_constraintEnd_toStartOf="@id/ic_check"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"/>
+        tools:text="hello my name is uyen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
