--- a/app/src/at-uyennguyen/res/values/colors.xml
+++ b/app/src/at-uyennguyen/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="grey">#606060</color>
     <color name="greyOfHint">#ACA8A8</color>
     <color name="green">#30BE76</color>
+    <color name="orange">#FF5252</color>
+    <color name="black">#000000</color>
 </resources>
 
