--- a/app/src/at-nguyenha/res/values/colors.xml
+++ b/app/src/at-nguyenha/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#30BE76</color>
+    <color name="colorPrimaryDark">#2aa868</color>
     <color name="colorAccent">#FF4081</color>
     <color name="textview_color_account">#30BE76</color>
     <color name="textview_textcolor_white">#FFFFFF</color>
