handle todo and change avatar

--- a/app/src/at-cuongle/res/layout/fragment_to_do.xml
+++ b/app/src/at-cuongle/res/layout/fragment_to_do.xml
@@ -15,9 +15,15 @@
         android:layout_marginRight="@dimen/padding_left_20dp"
         android:background="@drawable/ic_add" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/recyclerViewToDo" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewToDo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="650dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
 </RelativeLayout>
