--- a/app/src/at-cuongle/res/layout/fragment_main_screen.xml
+++ b/app/src/at-cuongle/res/layout/fragment_main_screen.xml
@@ -25,12 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/color_black">
+        android:background="@color/color_while">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMenu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </RelativeLayout>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
